gcc/testsuite/rust/rustc/ui/macros/println-percent-prefix-num-issue-125002_dg.rs
fn main() {
    println!("%100000", 1);
// { dg-error "" "" { target *-*-* } .-1 }
    println!("%     65536", 1);
// { dg-error "" "" { target *-*-* } .-1 }
}

